# de-lakehouse-pipeline

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  tree_tool.py
.checkpoints/: backfill_checkpoint.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
data/raw/: sample.csv
docs/: ARCHITECTURE.md  BACKFILL.md  CLOUD_RUN.md  CLOUD_STORAGE.md  COST_NOTES.md  DATA_MODEL.md  DATA_QUALITY.md  DEMO_QUERIES.md  DEV_SETUP.md  FAILURE_DRILLS.md  INCREMENTAL.md  ISSUE_TEMPLATE.md  OPS_METRICS.md  ORCHESTRATION.md  README_v2.md  RUNBOOK.md  STANDARDS.md  WEEKLY_LOG.md  erd.txt
docs/W10/: 2026-04-23-run.txy
docs/proof/: 2026-02-19-run.txt  2026-02-20-ci.txt  2026-02-21-run.txt  2026-02-22-run.txt  2026-02-24-run.txt  2026-2-23-run.txt  2026-2-25-run.txt  w01-weekly-log.txt  w01d1_make_lint.txt
infra/terraform/: README.md  main.tf  outputs.tf  variables.tf
migrations/: 002_tables.sql  003_stock_prices.sql  004_load_metadata.sql  005_marts.sql  006_pipeline_metadata.sql  007_drop_legacy_users.sql  008_add_source_to_market_bars.sql
orchestration/: dagster_pipeline.py  definitions.py
scripts/: backfill.py  init_db.sql  migrate.py  price_dashboard.py  seed.sql  seed_db.py
sql/: patterns_window.sql  quality_checks.sql
sql/marts/: mart_daily_symbol_summary.sql  mart_symbol_latest_price.sql  mart_symbol_volume_rank.sql
tests/: test_db_smoke.py  test_db_unit.py  test_extraction.py  test_pipeline.py  test_pipeline_smoke.py  test_smoke.py  test_sql_queries.py  test_sql_utils.py
(+119 files in other folders)
