[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "de-lakehouse-pipeline"
version = "0.1.0"
description = "Data Engineering Lakehouse Pipeline Project"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]  # 关键点：告诉工具代码在 src 文件夹里